; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_init_set.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/crypto/extr_crypto_mbedtls.c_crypto_bignum_init_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_bignum = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.crypto_bignum* @crypto_bignum_init_set(i32* %0, i64 %1) #0 {
  %3 = alloca %struct.crypto_bignum*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  %8 = call i32* @os_zalloc(i32 4)
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store %struct.crypto_bignum* null, %struct.crypto_bignum** %3, align 8
  br label %23

12:                                               ; preds = %2
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @mbedtls_mpi_read_binary(i32* %13, i32* %14, i64 %15)
  %17 = call i32 @MBEDTLS_MPI_CHK(i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = bitcast i32* %18 to %struct.crypto_bignum*
  store %struct.crypto_bignum* %19, %struct.crypto_bignum** %3, align 8
  br label %23

20:                                               ; No predecessors!
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @os_free(i32* %21)
  store %struct.crypto_bignum* null, %struct.crypto_bignum** %3, align 8
  br label %23

23:                                               ; preds = %20, %12, %11
  %24 = load %struct.crypto_bignum*, %struct.crypto_bignum** %3, align 8
  ret %struct.crypto_bignum* %24
}

declare dso_local i32* @os_zalloc(i32) #1

declare dso_local i32 @MBEDTLS_MPI_CHK(i32) #1

declare dso_local i32 @mbedtls_mpi_read_binary(i32*, i32*, i64) #1

declare dso_local i32 @os_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
